Theme: removed or changed occurrences of zoom. Fixes #7975 - Remove invalid CSS for legacy browsers
Because of overlapping issues, this also reverts most of e77edc60 and fixes it in a different way.

--- a/themes/base/jquery.ui.accordion.css
+++ b/themes/base/jquery.ui.accordion.css
@@ -14,7 +14,7 @@
 	position: relative;
 	margin-top: 2px;
 	padding: .5em .5em .5em .7em;
-	zoom: 1;
+	min-height: 0; /* support: IE7 */
 }
 .ui-accordion .ui-accordion-icons {
 	padding-left: 2.2em;
@@ -35,5 +35,4 @@
 	padding: 1em 2.2em;
 	border-top: 0;
 	overflow: auto;
-	zoom: 1;
 }
