--- a/themes/base/jquery.ui.button.css
+++ b/themes/base/jquery.ui.button.css
@@ -17,7 +17,6 @@
 	cursor: pointer;
 	vertical-align: middle;
 	text-align: center;
-	zoom: 1;
 	overflow: visible; /* removes extra width in IE */
 }
 .ui-button,
@@ -44,7 +43,7 @@ button.ui-button-icons-only {
 
 /* button text element */
 .ui-button .ui-button-text {
-	display: inline-block;
+	display: block;
 	line-height: normal;
 }
 .ui-button-text-only .ui-button-text {
