--- a/themes/base/jquery.ui.dialog.css
+++ b/themes/base/jquery.ui.dialog.css
@@ -40,7 +40,6 @@
 	padding: .5em 1em;
 	background: none;
 	overflow: auto;
-	zoom: 1;
 }
 .ui-dialog .ui-dialog-buttonpane {
 	text-align: left;
